Correciones en cuanto a ESLint, cambio de versión y nuevos tests probados
